// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Board All Filled With Triangles 1`] = `
Array [
  .c1 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c1:focus {
  outline: none;
}

.c0::after {
  clear: both;
  content: '';
  display: table;
}

<div
    className="c0"
  >
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    >
      △
    </button>
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    >
      △
    </button>
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    >
      △
    </button>
  </div>,
  .c1 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c1:focus {
  outline: none;
}

.c0::after {
  clear: both;
  content: '';
  display: table;
}

<div
    className="c0"
  >
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    >
      △
    </button>
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    >
      △
    </button>
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    >
      △
    </button>
  </div>,
  .c1 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c1:focus {
  outline: none;
}

.c0::after {
  clear: both;
  content: '';
  display: table;
}

<div
    className="c0"
  >
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    >
      △
    </button>
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    >
      △
    </button>
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    >
      △
    </button>
  </div>,
]
`;

exports[`Storyshots Board Default 1`] = `
Array [
  .c1 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c1:focus {
  outline: none;
}

.c0::after {
  clear: both;
  content: '';
  display: table;
}

<div
    className="c0"
  >
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    />
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    />
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    />
  </div>,
  .c1 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c1:focus {
  outline: none;
}

.c0::after {
  clear: both;
  content: '';
  display: table;
}

<div
    className="c0"
  >
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    />
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    />
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    />
  </div>,
  .c1 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c1:focus {
  outline: none;
}

.c0::after {
  clear: both;
  content: '';
  display: table;
}

<div
    className="c0"
  >
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    />
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    />
    <button
      className="c1"
      onClick={[Function]}
      style={null}
    />
  </div>,
]
`;

exports[`Storyshots Game Default 1`] = `
.c2 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c2:focus {
  outline: none;
}

.c1::after {
  clear: both;
  content: '';
  display: table;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  margin-left: 30px;
}

.c4 {
  margin-bottom: 10px;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <button
        className="c2"
        onClick={[Function]}
        style={null}
      />
      <button
        className="c2"
        onClick={[Function]}
        style={null}
      />
      <button
        className="c2"
        onClick={[Function]}
        style={null}
      />
    </div>
    <div
      className="c1"
    >
      <button
        className="c2"
        onClick={[Function]}
        style={null}
      />
      <button
        className="c2"
        onClick={[Function]}
        style={null}
      />
      <button
        className="c2"
        onClick={[Function]}
        style={null}
      />
    </div>
    <div
      className="c1"
    >
      <button
        className="c2"
        onClick={[Function]}
        style={null}
      />
      <button
        className="c2"
        onClick={[Function]}
        style={null}
      />
      <button
        className="c2"
        onClick={[Function]}
        style={null}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      次のプレイヤー: X
    </div>
    <div>
      <button
        onClick={[Function]}
      >
        Change Order
      </button>
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Square Default 1`] = `
.c0 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c0:focus {
  outline: none;
}

<button
  className="c0"
  style={null}
/>
`;

exports[`Storyshots Square Player 1 1`] = `
.c0 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c0:focus {
  outline: none;
}

<button
  className="c0"
  style={null}
>
  X
</button>
`;

exports[`Storyshots Square Player 1 Wins 1`] = `
.c0 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c0:focus {
  outline: none;
}

<button
  className="c0"
  style={
    Object {
      "backgroundColor": "yellow",
    }
  }
>
  X
</button>
`;

exports[`Storyshots Square Player 2 1`] = `
.c0 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c0:focus {
  outline: none;
}

<button
  className="c0"
  style={null}
>
  O
</button>
`;

exports[`Storyshots Square Third Player 1`] = `
.c0 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.c0:focus {
  outline: none;
}

<button
  className="c0"
  style={null}
>
  △
</button>
`;
